--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "16.8.6",
-    "react-native": "0.60.0"
+    "react-native": "0.60.0",
+    "ws": "^7.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.5.4",
